Use SVG image, fix background color of said image, tweak whitespace.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,10 @@ body {
     line-height: 1.3em;
 }
 
+img {
+    max-width: 100%;
+}
+
 header a {
     text-decoration: none;
     color: #000;
@@ -56,6 +60,9 @@ main {
 @media screen and (max-width: 800px) {
     header {
         display: block;
+    }
+    header h1 {
+        margin-bottom: 1rem;
     }
     header ul {
         flex-wrap: wrap;
